--- a/MercadoLibreBuscador/Scenes/Home/HomeViewController.xib
+++ b/MercadoLibreBuscador/Scenes/Home/HomeViewController.xib
@@ -14,20 +14,12 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" ambiguous="YES" text="Buscar en Mercado Libre" translatesAutoresizingMaskIntoConstraints="NO" id="vln-Vx-tz7">
-                    <rect key="frame" x="36" y="433" width="368" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="368" id="DZY-aH-bY4"/>
-                        <constraint firstAttribute="height" constant="30" id="P21-bY-7sN"/>
-                    </constraints>
-                    <textInputTraits key="textInputTraits"/>
-                </searchBar>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enviar a Nombre de Usuario - Dirección" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErS-ny-hBN">
-                    <rect key="frame" x="64" y="44" width="312" height="18"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Enviar a Nombre de Usuario - Dirección" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErS-ny-hBN">
+                    <rect key="frame" x="20" y="109" width="312" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="312" id="jIn-aJ-wDV"/>
                         <constraint firstAttribute="height" constant="18" id="xmn-uB-to5"/>
@@ -40,11 +32,7 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="ErS-ny-hBN" firstAttribute="top" secondItem="vln-Vx-tz7" secondAttribute="bottom" constant="-419" id="7cY-Af-kKH"/>
-                <constraint firstItem="vln-Vx-tz7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="433" id="9g4-cd-Hds"/>
-                <constraint firstItem="vln-Vx-tz7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="36" id="C7v-ob-1o9"/>
                 <constraint firstItem="ErS-ny-hBN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="64" id="TEE-JD-BZc"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vln-Vx-tz7" secondAttribute="trailing" constant="-404" id="fvt-eS-3pi"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="143.97321428571428"/>
         </view>
